--- a/index.html
+++ b/index.html
@@ -251,22 +251,22 @@
                     <h5 class="title-left">About me</h5>
                   </div>
                   <p class="lead">
-                    I am Abdoullah ELdeeb, a Full-Stack Software Engineer with a deep passion for software development
+                    II am Abdoullah ELdeeb, a Full-Stack Software Engineer with a deep passion for software development
                     and building secure, scalable, and high-performance web applications.
 
                     I have extensive experience designing, developing, and programming modern, responsive websites and
                     web applications using technologies such as HTML5, CSS3, Sass, Tailwind CSS, JavaScript, Bootstrap,
                     React.js, React Native, Next.js, jQuery, AJAX, JSON, and Python.
 
-                    My experience also includes working with databases such as SQL (using PHP) and MongoDB (using
-                    Node.js and Express), as well as building and customizing WordPress websites using Elementor,
-                    Elementor Pro, and various plugins.
-
                     I also have practical experience in AI integration and automation using technologies such as GPT and
                     Python scripting.
+                    I have experience in building RESTful APIs and integrating front-end and back-end systems to create
+                    seamless user experiences.
 
-                    I aspire to become a DevSecOps Engineer, combining my skills in software development, operations,
-                    and security to build secure, scalable, and efficient systems.
+                    I am constantly working on improving my skills and expanding my knowledge in various areas of
+                    software engineering, including system design, cybersecurity, and emerging technologies. My goal is
+                    to continue evolving as a software engineer, exploring new fields and mastering advanced concepts in
+                    modern software development.
 
                     I am committed to writing secure, maintainable, and well-tested code, following best practices and
                     unit testing to ensure reliability and performance. I have hands-on experience with unit and
@@ -281,12 +281,14 @@
 
                     I have a deep understanding of UX/UI principles, ensuring usability, accessibility, and a high level
                     of design.
+                    I value teamwork, collaboration, and clear communication throughout the development process to
+                    ensure high-quality and efficient results.
 
                     With my creative mindset, problem-solving skills, and attention to detail, I strive to deliver
                     innovative solutions that combine technology, functionality, and design excellence.
 
-                    I am passionate about continuous learning and technological innovation, always staying up to date
-                    with the latest trends in front-end and back-end development.
+                    I’m always eager to take on new challenges, learn emerging technologies, and contribute to projects
+                    that make a meaningful impact.
                   </p>
                 </div>
               </div>
