--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="./img/abdallah-cv.jpg" class="img-fluid rounded b-shadow-a" alt="" />
+                      <img src="./img/abdoullah-cv.jpeg" class="img-fluid rounded b-shadow-a" alt="" />
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -251,44 +251,42 @@
                     <h5 class="title-left">About me</h5>
                   </div>
                   <p class="lead">
-                    II am Abdoullah ELdeeb, a Full-Stack Software Engineer with a deep passion for software development
+                    I am Abdoullah ELdeeb, a Full-Stack Software Engineer with a deep passion for software development
                     and building secure, scalable, and high-performance web applications.
 
                     I have extensive experience designing, developing, and programming modern, responsive websites and
                     web applications using technologies such as HTML5, CSS3, Sass, Tailwind CSS, JavaScript, Bootstrap,
-                    React.js, React Native, Next.js, jQuery, AJAX, JSON, and Python.
+                    React.js, React Native, Next.js, jQuery, typescript, AJAX, and JSON.
 
-                    I also have practical experience in AI integration and automation using technologies such as GPT and
-                    Python scripting.
-                    I have experience in building RESTful APIs and integrating front-end and back-end systems to create
-                    seamless user experiences.
+                    On the backend, I have solid experience working with Node.js, Express.js, and PHP, as well as
+                    WordPress for custom theme and plugin development.
+                    I am also skilled in working with databases such as MongoDB, MySQL, and PostgreSQL, and have built
+                    and integrated RESTful APIs to connect front-end and back-end systems for seamless user experiences.
 
-                    I am constantly working on improving my skills and expanding my knowledge in various areas of
-                    software engineering, including system design, cybersecurity, and emerging technologies. My goal is
-                    to continue evolving as a software engineer, exploring new fields and mastering advanced concepts in
-                    modern software development.
+                    I also have practical experience in AI integration and automation using GPT models and Python
+                    scripting.
 
-                    I am committed to writing secure, maintainable, and well-tested code, following best practices and
-                    unit testing to ensure reliability and performance. I have hands-on experience with unit and
-                    integration testing tools such as Jest, Mocha, and Pytest, which help maintain code quality and
-                    stability throughout the development lifecycle.
+                    I’m constantly improving my skills in system design, cybersecurity, and emerging technologies,
+                    aiming to evolve continuously as a software engineer and master advanced concepts in modern software
+                    development.
 
-                    I also have experience using source control tools such as Git and GitHub, enabling effective
-                    collaboration and release management in development environments.
+                    I write secure, maintainable, and well-tested code, following best practices and using testing tools
+                    like Jest, Mocha, and Pytest to ensure performance and stability.
 
-                    In addition to programming, I am proficient in Adobe Photoshop, Illustrator, and Figma, enabling me
-                    to transform creative ideas into visually appealing and user-friendly interfaces.
+                    I have experience using Git and GitHub for version control, enabling efficient collaboration and
+                    release management.
 
-                    I have a deep understanding of UX/UI principles, ensuring usability, accessibility, and a high level
-                    of design.
+                    In addition to programming, I am proficient in Adobe Photoshop, Illustrator, and Figma, allowing me
+                    to create visually appealing and user-friendly interfaces based on strong UX/UI design principles.
+
                     I value teamwork, collaboration, and clear communication throughout the development process to
-                    ensure high-quality and efficient results.
+                    ensure quality and efficiency.
 
                     With my creative mindset, problem-solving skills, and attention to detail, I strive to deliver
                     innovative solutions that combine technology, functionality, and design excellence.
 
-                    I’m always eager to take on new challenges, learn emerging technologies, and contribute to projects
-                    that make a meaningful impact.
+                    I’m always eager to take on new challenges, explore new technologies, and contribute to impactful
+                    projects that make a real difference.
                   </p>
                 </div>
               </div>
@@ -485,11 +483,11 @@
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">
-                      <a href="./CareerPath/full-Stack.html">Full Stack Engineer
+                      <a href="./CareerPath/full-stack.html">Full Stack Software Engineer
                       </a>
                     </h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Full Stack Engineer.
+                      <span class="w-ctegory"> Full Stack Software Engineer.
                       </span>
                       <span class="w-date">1 Jan 2023</span>
                     </div>
@@ -504,7 +502,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="work-box">
             <a href="img/il_570xN.2660772309_cfts.png" ata-lightbox="gallery-mf">
               <div class="work-img">
@@ -561,7 +559,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
