Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -251,42 +251,27 @@
                     <h5 class="title-left">About me</h5>
                   </div>
                   <p class="lead">
-                    I am Abdoullah ELdeeb, a Full-Stack Software Engineer with a deep passion for software development
-                    and building secure, scalable, and high-performance web applications.
+                  I am Abdoullah ELdeeb, a Full-Stack Software Engineer with a deep passion for software development and a clear vision for building a strong, high-impact career in the tech industry. I am currently dedicated to an intensive development phase, mastering advanced concepts to deliver secure, scalable, and high-performance applications.
 
-                    I have extensive experience designing, developing, and programming modern, responsive websites and
-                    web applications using technologies such as HTML5, CSS3, Sass, Tailwind CSS, JavaScript, Bootstrap,
-                    React.js, React Native, Next.js, jQuery, typescript, AJAX, and JSON.
+Core Expertise & Technical Toolkit:
 
-                    On the backend, I have solid experience working with Node.js, Express.js, and PHP, as well as
-                    WordPress for custom theme and plugin development.
-                    I am also skilled in working with databases such as MongoDB, MySQL, and PostgreSQL, and have built
-                    and integrated RESTful APIs to connect front-end and back-end systems for seamless user experiences.
+Frontend Development: I have extensive experience in designing and programming modern, responsive interfaces using HTML5, CSS3, Sass, Tailwind CSS, JavaScript, Bootstrap, React.js, React Native, Next.js, jQuery, TypeScript, AJAX, and JSON.
 
-                    I also have practical experience in AI integration and automation using GPT models and Python
-                    scripting.
+Backend & ERP Systems: I am specializing in Enterprise Solutions, focusing on the customization and development of Odoo and ERPNext. My backend foundation is built on Node.js, Express.js, and PHP, including advanced WordPress custom theme and plugin development.
 
-                    I’m constantly improving my skills in system design, cybersecurity, and emerging technologies,
-                    aiming to evolve continuously as a software engineer and master advanced concepts in modern software
-                    development.
+Database & API Integration: Skilled in architecting data with MongoDB, MySQL, and PostgreSQL, and building seamless RESTful APIs to connect complex front-end and back-end systems.
 
-                    I write secure, maintainable, and well-tested code, following best practices and using testing tools
-                    like Jest, Mocha, and Pytest to ensure performance and stability.
+AI & Emerging Tech: I have practical experience in AI integration and automation using GPT models and Python scripting, constantly evolving my skills in System Design and Cybersecurity.
 
-                    I have experience using Git and GitHub for version control, enabling efficient collaboration and
-                    release management.
+Quality & Design Excellence:
 
-                    In addition to programming, I am proficient in Adobe Photoshop, Illustrator, and Figma, allowing me
-                    to create visually appealing and user-friendly interfaces based on strong UX/UI design principles.
+Clean Code: I write secure, maintainable, and well-tested code following industry best practices, utilizing tools like Jest, Mocha, and Pytest to ensure stability.
 
-                    I value teamwork, collaboration, and clear communication throughout the development process to
-                    ensure quality and efficiency.
+Design-Driven Development: Beyond coding, I am proficient in Adobe Photoshop, Illustrator, and Figma. This allows me to create visually stunning and user-friendly interfaces rooted in solid UI/UX principles.
 
-                    With my creative mindset, problem-solving skills, and attention to detail, I strive to deliver
-                    innovative solutions that combine technology, functionality, and design excellence.
+Collaboration: I am an expert in version control using Git and GitHub, and I highly value teamwork, clear communication, and efficient release management.
 
-                    I’m always eager to take on new challenges, explore new technologies, and contribute to impactful
-                    projects that make a real difference.
+With a creative mindset and a relentless drive for problem-solving, I am currently intensifying my expertise to master modern software development. My goal is to bridge the gap between complex business logic (ERP) and elegant technical execution, contributing to impactful projects that make a real difference in the digital world.
                   </p>
                 </div>
               </div>
@@ -837,3 +822,4 @@
 </body>
 
 </html>
+
